--- a/ChitChat_Android/app/src/main/res/values-zh-rCN/strings.xml
+++ b/ChitChat_Android/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,5 +2,10 @@
 <resources>
     <string name="app_name">ChitChat_Android</string>
     <string name="action_sign_in_short">登录</string>
+    <string name="login_failed">登录失败</string>
     <string name="user_name">用户名</string>
+    <string name="server_url">服务器地址</string>
+    <string name="ok">OK</string>
+    <string name="error">错误</string>
+    <string name="connect_failed">连接失败</string>
 </resources>
